Fix exception overflow styling in history display view.

--- a/Source/BlueCollar.Dashboard/Static/Src/Less/collar.less
+++ b/Source/BlueCollar.Dashboard/Static/Src/Less/collar.less
@@ -45,7 +45,7 @@
 }
 
 .form {
-    input[type="text"],
+	input[type="text"],
     textarea {
         width: 250px;
 		margin-bottom: 0;
@@ -57,6 +57,9 @@
     }
 
 	.exception {
+		width: 260px;
+		overflow-x: auto;
+
 		code {
 			display: block;
 			padding: 0;
@@ -549,6 +552,10 @@
             width: 328px;
         }
 
+		.exception {
+			width: 330px;
+		}
+
 		.field-schedule-repeat {
 			select {
 				width: 256px;
@@ -571,6 +578,10 @@
         select {
             width: 186px;
         }
+
+		.exception {
+			width: 188px;
+		}
 
 		.field-schedule-repeat {
 			select {
@@ -617,6 +628,7 @@
 	.container-page {
 		padding-left: 20px;
 		padding-right: 20px;
+		min-width: 300px
 	}
 
 	.form-search {
